add joi validation library

--- a/.gitignore
+++ b/.gitignore
@@ -327,3 +327,95 @@ node_modules/vary/index.js
 node_modules/vary/LICENSE
 node_modules/vary/package.json
 node_modules/vary/README.md
+node_modules/@hapi/hoek/lib/applyToDefaults.js
+node_modules/@hapi/hoek/lib/assert.js
+node_modules/@hapi/hoek/lib/bench.js
+node_modules/@hapi/hoek/lib/block.js
+node_modules/@hapi/hoek/lib/clone.js
+node_modules/@hapi/hoek/lib/contain.js
+node_modules/@hapi/hoek/lib/deepEqual.js
+node_modules/@hapi/hoek/lib/error.js
+node_modules/@hapi/hoek/lib/escapeHeaderAttribute.js
+node_modules/@hapi/hoek/lib/escapeHtml.js
+node_modules/@hapi/hoek/lib/escapeJson.js
+node_modules/@hapi/hoek/lib/escapeRegex.js
+node_modules/@hapi/hoek/lib/flatten.js
+node_modules/@hapi/hoek/lib/ignore.js
+node_modules/@hapi/hoek/lib/index.d.ts
+node_modules/@hapi/hoek/lib/index.js
+node_modules/@hapi/hoek/lib/intersect.js
+node_modules/@hapi/hoek/lib/isPromise.js
+node_modules/@hapi/hoek/lib/merge.js
+node_modules/@hapi/hoek/lib/once.js
+node_modules/@hapi/hoek/lib/reach.js
+node_modules/@hapi/hoek/lib/reachTemplate.js
+node_modules/@hapi/hoek/lib/stringify.js
+node_modules/@hapi/hoek/lib/types.js
+node_modules/@hapi/hoek/lib/utils.js
+node_modules/@hapi/hoek/lib/wait.js
+node_modules/@hapi/hoek/LICENSE.md
+node_modules/@hapi/hoek/package.json
+node_modules/@hapi/hoek/README.md
+node_modules/@hapi/topo/lib/index.d.ts
+node_modules/@hapi/topo/lib/index.js
+node_modules/@hapi/topo/LICENSE.md
+node_modules/@hapi/topo/package.json
+node_modules/@hapi/topo/README.md
+node_modules/@sideway/address/lib/decode.js
+node_modules/@sideway/address/lib/domain.js
+node_modules/@sideway/address/lib/email.js
+node_modules/@sideway/address/lib/errors.js
+node_modules/@sideway/address/lib/index.d.ts
+node_modules/@sideway/address/lib/index.js
+node_modules/@sideway/address/lib/ip.js
+node_modules/@sideway/address/lib/tlds.js
+node_modules/@sideway/address/lib/uri.js
+node_modules/@sideway/address/LICENSE.md
+node_modules/@sideway/address/package.json
+node_modules/@sideway/address/README.md
+node_modules/@sideway/formula/lib/index.d.ts
+node_modules/@sideway/formula/lib/index.js
+node_modules/@sideway/formula/LICENSE.md
+node_modules/@sideway/formula/package.json
+node_modules/@sideway/formula/README.md
+node_modules/@sideway/pinpoint/lib/index.d.ts
+node_modules/@sideway/pinpoint/lib/index.js
+node_modules/@sideway/pinpoint/LICENSE.md
+node_modules/@sideway/pinpoint/package.json
+node_modules/@sideway/pinpoint/README.md
+node_modules/joi/dist/joi-browser.min.js
+node_modules/joi/lib/annotate.js
+node_modules/joi/lib/base.js
+node_modules/joi/lib/cache.js
+node_modules/joi/lib/common.js
+node_modules/joi/lib/compile.js
+node_modules/joi/lib/errors.js
+node_modules/joi/lib/extend.js
+node_modules/joi/lib/index.d.ts
+node_modules/joi/lib/index.js
+node_modules/joi/lib/manifest.js
+node_modules/joi/lib/messages.js
+node_modules/joi/lib/modify.js
+node_modules/joi/lib/ref.js
+node_modules/joi/lib/schemas.js
+node_modules/joi/lib/state.js
+node_modules/joi/lib/template.js
+node_modules/joi/lib/trace.js
+node_modules/joi/lib/types/alternatives.js
+node_modules/joi/lib/types/any.js
+node_modules/joi/lib/types/array.js
+node_modules/joi/lib/types/binary.js
+node_modules/joi/lib/types/boolean.js
+node_modules/joi/lib/types/date.js
+node_modules/joi/lib/types/function.js
+node_modules/joi/lib/types/keys.js
+node_modules/joi/lib/types/link.js
+node_modules/joi/lib/types/number.js
+node_modules/joi/lib/types/object.js
+node_modules/joi/lib/types/string.js
+node_modules/joi/lib/types/symbol.js
+node_modules/joi/lib/validator.js
+node_modules/joi/lib/values.js
+node_modules/joi/LICENSE.md
+node_modules/joi/package.json
+node_modules/joi/README.md
